<?xml version="1.0"?>
<package format="3">
  <name>six_dof_arm</name>
  <version>0.0.0</version>
  <description>6 DOF Robot Arm with ros2_control</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core -->
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>forward_command_controller</depend>

  <!-- Simulation -->
  <depend>gazebo_ros2_control</depend>

  <!-- Optional (later MoveIt) -->
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
